Dummy_Package_for_scratch_org/main/default/objects/Streaming_Setting__mdt/fields/Channel_Name__c.field-meta.xml
<CustomField>
    <fullName>Channel_Name__c</fullName>
    <inlineHelpText>Streaming channel (PushTopic) name</inlineHelpText>
    <label>Channel Name</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>