Dummy_Package_for_scratch_org/main/default/objects/Streaming_Setting__mdt/fields/Enabled__c.field-meta.xml
<CustomField>
    <fullName>Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>When enabled streaming for the given channel will be tracked for real time changes.</inlineHelpText>
    <label>Enabled</label>
    <type>Checkbox</type>
</CustomField>